--- a/scss/sections/section-footer.scss
+++ b/scss/sections/section-footer.scss
@@ -174,7 +174,7 @@ details {
         margin: auto;
     }
   
-    .icon-minus,
+    .footer__title .icon-minus,
     .footer__title.open .icon-plus {
         display: none;
     }
