--- a/sections/featured-posts.liquid
+++ b/sections/featured-posts.liquid
@@ -76,6 +76,7 @@
                 <div
                     class="swiper-container js-swiper"
                     data-count-desktop="{{ columns_desktop }}"
+                    data-count-tablet="3"
                     data-count-mobile="{{ columns_mobile }}"
                 >
                     <ul class="featured-posts__list columns__desktop--{{ columns_desktop }} columns__mobile--{{ columns_mobile }} swiper-wrapper">
