--- a/snippets/complementary-viewed.liquid
+++ b/snippets/complementary-viewed.liquid
@@ -81,6 +81,7 @@
                         <div
                             class="swiper-container js-swiper"
                             data-count-desktop="{{ columns_desktop }}"
+                            data-count-tablet="2"
                             data-count-mobile="1"
                         >
                             <ul class="product-complementary__list swiper-wrapper list-view">
