--- a/snippets/form-product-combo.liquid
+++ b/snippets/form-product-combo.liquid
@@ -47,7 +47,8 @@
     </div>
 
     {% capture "form_id" %}product_form-{{ section.id }}-{{ product.id }}{%- endcapture %}
-    {% form 'product', product, id: form_id, class: 'main-product__form js-main-combo-action' %}
+    {% capture "form_class" %}main-product__form js-main-combo-action js{{form_sticky}}{%- endcapture %}
+    {% form 'product', product, id: form_id, class: form_class %}
         <select
             name="id"
             id="ProductSelect-{{ product.id }}"
