--- a/scss/sections/section-product-recommendations.scss
+++ b/scss/sections/section-product-recommendations.scss
@@ -118,25 +118,30 @@ swiper-section .product-recommendations__list {
 @media screen and (max-width: 749px) {
     .product-recommendations__list {
         flex-wrap: nowrap;
-        overflow-x: scroll;
-        scroll-snap-type: x mandatory;
+        //overflow-x: scroll;
+        //scroll-snap-type: x mandatory;
     }
 }
 
 .columns__desktop--4 > li {
     width: calc(25% - 1.5rem);
-    max-width: 25%;
+    @media (min-width: 1200px) {
+        max-width: 25%;
+    }
 }
 
 .columns__desktop--3 > li {
     width: calc(33.33% - 1.4rem);
-    max-width: 33.33%;
+    @media (min-width: 1200px) {
+        max-width: 33.33%;
+    }
 }
 
 .columns__desktop--2 > li {
     width: calc(50% - 1rem);
-    max-width: 50%;
-    
+    @media (min-width: 1200px) {
+        max-width: 50%;
+    }
 }
 
 @media (min-width: 750px) and (max-width: 991px) {
