--- a/sections/related-products.liquid
+++ b/sections/related-products.liquid
@@ -92,6 +92,7 @@
                         <div
                             class="swiper-container js-swiper"
                             data-count-desktop="{{ columns_desktop }}"
+                            data-count-tablet="3"
                             data-count-mobile="{{ columns_mobile }}"
                         >
                             <ul class="product-recommendations__list columns__desktop--{{ columns_desktop }} columns__mobile--{{ columns_mobile }} swiper-wrapper">
