--- a/snippets/form-product.liquid
+++ b/snippets/form-product.liquid
@@ -1,23 +1,109 @@
-{% capture "form_id" %}product_form-{{ section.id }}-{{ product.id }}{%- endcapture %}
-{% form 'product', product, id: form_id, class: 'main-product__form' %}
-    {% if product.available and product.variants.size > 1 %}
-        <variant-product
-            class="swatch-wrap"
-            data-section="{{ section.id }}-{{ product.id }}"
-            data-url="{{ product.url | within: collection  }}"
-        >
-            {% render 'swatch'
-                for product.options as swatch,
-                product: product,
-                variant_type: variant_type,
-                grouped_product: grouped_product
-            %}
-            <script type="application/json">
-                {{ product.variants | json }}
-            </script>
+{% if product.available %}
+    {% capture "form_id" %}product_form-{{ section.id }}-{{ product.id }}{{form_sticky}}{%- endcapture %}
+    {% capture "form_class" %}main-product__form{%- endcapture %}
+    {% form 'product', product, id: form_id, class: form_class %}
+        {% if product.available and product.variants.size > 1 %}
+            <variant-product
+                class="swatch-wrap js{{form_sticky}}"
+                data-section="{{ section.id }}-{{ product.id }}{{form_sticky}}"
+                data-url="{{ product.url | within: collection }}"
+            >
+                <div class="swatch-container js-swatch">
+                    {% render 'swatch'
+                        for product.options as swatch,
+                        product: product,
+                        variant_type: variant_type,
+                        grouped_product: grouped_product,
+                        form_id: form_sticky
+                    %}
+                </div>
+                <script type="application/json">
+                    {{ product.variants | json }}
+                </script>
+                <select
+                    name="id"
+                    id="ProductSelect-{{ product.id }}{{form_sticky}}"
+                    class="card-product__variants no-js"
+                    data-product-select
+                >
+                    {% for variant in product.variants %}
+                        {% if variant.available %}
+                            <option
+                                {% if variant == product.selected_or_first_available_variant %}
+                                    selected="selected"
+                                {% endif %}
+                                data-sku="{{ variant.sku }}"
+                                data-qty="{{ variant.inventory_quantity }}"
+                                data-inventory-policy="{{ variant.inventory_policy }}"
+                                value="{{ variant.id }}"
+                            >
+                                {{ variant.title }} - {{ variant.price | money_with_currency }}
+                            </option>
+
+                        {% else %}
+                            <option disabled="disabled">
+                                {{ variant.title }} - {{ 'products.product.sold_out' | t }}
+                            </option>
+                        {% endif %}
+                    {% endfor %}
+                </select>
+
+                <div class="main-product__action--box">
+                    <div class="main-product__action--quantity">
+                        <quantity-input class="quantity">
+                            <button
+                                class="quantity__button quantity__button--minus no-js-hidden"
+                                name="minus"
+                                type="button"
+                            >
+                                {% render 'icons-svg', icons: 'minus' %}
+                            </button>
+                            <input
+                                class="quantity__input quantity-selector js-quantity"
+                                type="number"
+                                name="quantity"
+                                id="Quantity-{{ product.id }}{{form_sticky}}"
+                                min="1"
+                                step="1"
+                                value="1"
+                                {% if product.selected_or_first_available_variant.inventory_management == 'shopify'
+                                    and product.selected_or_first_available_variant.inventory_policy != 'continue'
+                                %}
+                                    max="{{ product.selected_or_first_available_variant.inventory_quantity }}"
+                                {% endif %}
+                            >
+                            <button
+                                class="quantity__button quantity__button--plus no-js-hidden"
+                                name="plus"
+                                type="button"
+                            >
+                                {% render 'icons-svg', icons: 'plus' %}
+                            </button>
+                        </quantity-input>
+                    </div>
+                    <div class="main-product__action--btn">
+                        <button
+                            type="submit"
+                            name="add"
+                            id="AddToCart-{{ product.id }}{{form_sticky}}"
+                            class="button--secondary card-product__button-cart js-btn-cart"
+                        >
+                            <span>{{ 'products.product.add_to_cart' | t }}</span>
+                        </button>
+                    </div>
+                    <div class="main-product__action--cart-messages" data-ajax-cart-messages="form"></div>
+                </div>
+                {% unless isSticky %}
+                    <div class="main-product__action--pay">
+                        {{ form | payment_button }}
+                    </div>
+                {% endunless %}
+            </variant-product>
+
+        {% else %}
             <select
                 name="id"
-                id="ProductSelect-{{ product.id }}"
+                id="ProductSelect-{{ product.id }}{{form_sticky}}"
                 class="card-product__variants no-js"
                 data-product-select
             >
@@ -28,8 +114,6 @@
                                 selected="selected"
                             {% endif %}
                             data-sku="{{ variant.sku }}"
-                            data-qty="{{ variant.inventory_quantity }}"
-                            data-inventory-policy="{{ variant.inventory_policy }}"
                             value="{{ variant.id }}"
                         >
                             {{ variant.title }} - {{ variant.price | money_with_currency }}
@@ -40,45 +124,38 @@
                     {% endif %}
                 {% endfor %}
             </select>
-
             <div class="main-product__action--box">
                 <div class="main-product__action--quantity">
                     <quantity-input class="quantity">
-                        <button
-                            class="quantity__button quantity__button--minus no-js-hidden"
-                            name="minus"
-                            type="button"
-                        >
+                        <button class="quantity__button quantity__button--minus" name="minus" type="button">
                             {% render 'icons-svg', icons: 'minus' %}
                         </button>
+
                         <input
-                            class="quantity__input quantity-selector js-quantity"
+                            class="quantity__input js-quantity"
                             type="number"
                             name="quantity"
-                            id="Quantity-{{ product.id }}"
                             min="1"
                             step="1"
                             value="1"
-                            {% if product.selected_or_first_available_variant.inventory_management == 'shopify'
-                                and product.selected_or_first_available_variant.inventory_policy != 'continue'
+                            {% if product.variants[0].inventory_management == 'shopify'
+                                and product.variants[0].inventory_policy != 'continue'
                             %}
-                                max="{{ product.selected_or_first_available_variant.inventory_quantity }}"
+                                max="{{ product.variants[0].inventory_quantity }}"
                             {% endif %}
                         >
-                        <button
-                            class="quantity__button quantity__button--plus no-js-hidden"
-                            name="plus"
-                            type="button"
-                        >
+
+                        <button class="quantity__button quantity__button--plus" name="plus" type="button">
                             {% render 'icons-svg', icons: 'plus' %}
                         </button>
                     </quantity-input>
                 </div>
+
                 <div class="main-product__action--btn">
                     <button
                         type="submit"
                         name="add"
-                        id="AddToCart-{{ product.id }}"
+                        id="AddToCart-{{ product.id }}{{form_sticky}}"
                         class="button--secondary card-product__button-cart js-btn-cart"
                     >
                         <span>{{ 'products.product.add_to_cart' | t }}</span>
@@ -86,80 +163,22 @@
                 </div>
                 <div class="main-product__action--cart-messages" data-ajax-cart-messages="form"></div>
             </div>
-            <div class="main-product__action--pay">
-                {% comment %}
+            {% unless isSticky %}
+                <div class="main-product__action--pay">
                     {{ form | payment_button }}
-                {% endcomment %}
-            </div>
-        </variant-product>
-
-    {% else %}
-        <select
-            name="id"
-            id="ProductSelect-{{ product.id }}"
-            class="card-product__variants no-js"
-            data-product-select
+                </div>
+            {% endunless %}
+        {% endif %}
+    {% endform %}
+{% else %}
+    <div class="main-product__action--btn">
+        <button
+            type="button"
+            id="SoldOutText-{{ product.id }}{{form_sticky}}"
+            class="button--secondary card-product__button-sold card-product__button-cart"
+            disabled=""
         >
-            {% for variant in product.variants %}
-                {% if variant.available %}
-                    <option
-                        {% if variant == product.selected_or_first_available_variant %}
-                            selected="selected"
-                        {% endif %}
-                        data-sku="{{ variant.sku }}"
-                        value="{{ variant.id }}"
-                    >
-                        {{ variant.title }} - {{ variant.price | money_with_currency }}
-                    </option>
-
-                {% else %}
-                    <option disabled="disabled">{{ variant.title }} - {{ 'products.product.sold_out' | t }}</option>
-                {% endif %}
-            {% endfor %}
-        </select>
-        <div class="main-product__action--box">
-            <div class="main-product__action--quantity">
-                <quantity-input class="quantity">
-                    <button class="quantity__button quantity__button--minus" name="minus" type="button">
-                        {% render 'icons-svg', icons: 'minus' %}
-                    </button>
-
-                    <input
-                        class="quantity__input js-quantity"
-                        type="number"
-                        name="quantity"
-                        min="1"
-                        step="1"
-                        value="1"
-                        {% if product.variants[0].inventory_management == 'shopify'
-                            and product.variants[0].inventory_policy != 'continue'
-                        %}
-                            max="{{ product.variants[0].inventory_quantity }}"
-                        {% endif %}
-                    >
-
-                    <button class="quantity__button quantity__button--plus" name="plus" type="button">
-                        {% render 'icons-svg', icons: 'plus' %}
-                    </button>
-                </quantity-input>
-            </div>
-
-            <div class="main-product__action--btn">
-                <button
-                    type="submit"
-                    name="add"
-                    id="AddToCart-{{ product.id }}"
-                    class="button--secondary card-product__button-cart js-btn-cart"
-                >
-                    <span>{{ 'products.product.add_to_cart' | t }}</span>
-                </button>
-            </div>
-            <div class="main-product__action--cart-messages" data-ajax-cart-messages="form"></div>
-        </div>
-        <div class="main-product__action--pay">
-            {% comment %}
-                {{ form | payment_button }}
-            {% endcomment %}
-        </div>
-    {% endif %}
-{% endform %}
+            <span id="SoldOutText">{{ 'products.product.sold_out' | t }}</span>
+        </button>
+    </div>
+{% endif %}
