--- a/sections/main-product.liquid
+++ b/sections/main-product.liquid
@@ -233,6 +233,9 @@
                 img_size: settings.prod_img_size,
                 notify_me: false
             %}
+            <button class="js-sticky-select button-sticky-select button button--link">
+                {{ 'products.product.sticky_select_options' | t }}
+            </button>
         </sticky-add-to-cart>
     {% endunless %}
 </section>
