--- a/scss/pages/section-main-collection.scss
+++ b/scss/pages/section-main-collection.scss
@@ -709,3 +709,19 @@
         margin-left: auto;
     }
 }
+
+.product-grid-box .recently__viewed .recently__item {
+    width: 100%;
+    padding: 0 1rem 3rem;
+    max-width: 100%;
+    @media (min-width: 570px) and (max-width: 767px) {
+        max-width: 50%;
+    }
+    @media (min-width: 1000px) {
+        max-width: 50%;
+    }
+    @media (min-width: 1200px) {
+        max-width: 33.33%;
+        padding: 0 1.5rem 3rem;
+    }
+}
