--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -137,12 +137,16 @@
         <main id="MainContent" class="content-for-layout focus-none" role="main" tabindex="-1">
             {{ content_for_layout }}
         </main>
+        {% liquid
+            section 'footer'
 
-        {% section 'footer' %}
+            unless template == 'cart'
+                section 'cart-drawer'
+            endunless
 
-        {% section 'cart-drawer' %}
-        {% section 'newsletter-popup' %}
-        {% section 'cookie-notice' %}
+            section 'newsletter-popup'
+            section 'cookie-notice'
+        %}
 
         <ul hidden>
             <li id="a11y-refresh-page-message">{{ 'accessibility.refresh_page' | t }}</li>
