--- a/scss/components/component-recently-viewed.scss
+++ b/scss/components/component-recently-viewed.scss
@@ -11,10 +11,12 @@
         margin: 0 -1.5rem -3rem;
     }
 }
-
-#recently__products.recently__products, .product-grid-box {
+#recently__products.recently__products {
     margin: 10px 0 0 0;
     display: block;
+}
+
+.recently__viewed {
     .recently__item {
         max-width: 100%;
         width: 100%;
