--- a/scss/sections/section-ajax-cart.scss
+++ b/scss/sections/section-ajax-cart.scss
@@ -128,10 +128,15 @@
 
 #cart-drawer_note {
 	margin-bottom: 2rem;
+	width: 100%;
 }
 
 .cart-drawer__property {
 	margin-bottom: 2rem;
+	display: flex;
+	flex-wrap: wrap;
+	align-items: center;
+	justify-content: space-between;
 }
 
 .cart-drawer__property label {
@@ -145,8 +150,9 @@
 }
 
 .cart-drawer__property-label {
-	min-width: 75px;
+	min-width: 90px;
 	display: inline-block;
+	padding-right: 10px;
 }
 
 .cart-drawer__footer-content .cart-drawer__property-label {
@@ -158,7 +164,7 @@
 	width: auto;
 	padding: 1rem 3.5rem 1rem 1.5rem;
 	margin-bottom: 0;
-	min-width: 130px;
+	min-width: 200px;
 }
 
 input.cart-drawer__input {
@@ -168,15 +174,17 @@ input.cart-drawer__input {
 }
 
 input.cart-drawer__input--qty {
-	width: 60px;
+	width: 90px;
 	text-align: center;
 	padding-top: .5rem;
 	padding-bottom: .5rem;
+	padding-left: 1.5rem;
+	padding-right: 1.5rem;
 	//border-radius: var(--button-border-radius);
 }
 
 input.cart-drawer__input--property {
-	width: 130px;
+	width: 200px;
 }
 
 .cart-drawer__footer-toggler {
@@ -260,17 +268,21 @@ input.cart-drawer__input--property {
 .ajax-cart-item__quantity-wrapper {
 	display: inline-block;
 	position: relative;
-	padding-right: 30px;
+	padding-right: 0;
 	.ajax-cart__quantity-button--minus {
 		position: absolute;
-		right: 0;
-		bottom: -.6rem;
+		left: 2px;
+		top: 50%;
+		margin-top: -13px;
+		text-align: center;
 	}
 
 	.ajax-cart__quantity-button--plus {
 		position: absolute;
-		right: 0;
-		top: -.6rem;
+		right: 2px;
+		top: 50%;
+		margin-top: -13px;
+		text-align: center;
 	}
 }
 
@@ -295,7 +307,9 @@ input.cart-drawer__input--property {
 	width: 1.6rem;
 	height: 1.6rem;
 	margin-top: .4rem;
-	display: flex;
+	display: inline-block;
+	margin-left: auto;
+	margin-right: auto;
 }
 
 .ajax-cart__remove-button {
