--- a/sections/cart-drawer.liquid
+++ b/sections/cart-drawer.liquid
@@ -482,7 +482,9 @@
                                     {%- assign input = block.settings.label | escape -%}
                                     {% if input != blank %}
                                         <div class="cart-drawer__property">
-                                            <span class="cart-drawer__property-label"> {{ input }}: </span>
+                                            {% if input != blank %}
+                                                <span class="cart-drawer__property-label"> {{ input }}: </span>
+                                            {% endif %}
                                             <input
                                                 type="text"
                                                 name="attributes[{{ input }}]"
@@ -497,7 +499,9 @@
                                     {%- assign select_value = block.settings.value -%}
                                     {% if select_value != blank %}
                                         <div class="cart-drawer__property">
-                                            <span class="cart-drawer__property-label"> {{ select_label }}: </span>
+                                            {% if select_value != blank %}
+                                                <span class="cart-drawer__property-label"> {{ select_label }}: </span>
+                                            {% endif %}
                                             <select name="attributes[select_label]" data-ajax-cart-property-input>
                                                 {% assign suggested_days = select_value | split: '|' %}
                                                 <option
@@ -527,7 +531,9 @@
                                     {%- assign radio_value = block.settings.value -%}
                                     {% if radio_value != blank %}
                                         <div class="cart-drawer__property">
-                                            <span class="cart-drawer__property-label">{{ radio_label }}:</span>
+                                            {% if radio_value != blank %}
+                                                <span class="cart-drawer__property-label">{{ radio_label }}:</span>
+                                            {% endif %}
                                             {% assign suggested_time = radio_value | split: '|' %}
                                             {% for time in suggested_time %}
                                                 <label>
@@ -550,7 +556,6 @@
                                     {%- assign checkbox = block.settings.label | escape -%}
                                     {% if checkbox != blank %}
                                         <div class="cart-drawer__property">
-                                            <span class="ajax-cart__property-label"></span>
                                             <label>
                                                 <input
                                                     type="hidden"
