--- a/sections/main-cart.liquid
+++ b/sections/main-cart.liquid
@@ -57,24 +57,6 @@
     style="{{ styles }}"
 >
     <div class="container">
-        <div>
-            <!-- Free shipping progress markup -->
-            {% if show_shipping %}
-                <div
-                    class="cart-drawer-shipping__wrapper js-cart-drawer-shipping"
-                    data-total="{{ shipping_total }}"
-                >
-                    <p class="cart-drawer-shipping__numOuter">
-                        {{ 'sections.cart.shipping.outer_first' | t }}
-                        <span class="cart-drawer-shipping__num"></span> {{ 'sections.cart.shipping.outer_second' | t }}
-                    </p>
-                    <p class="cart-drawer-shipping__success">{{ 'sections.cart.shipping.success' | t }}</p>
-                    <div class="cart-drawer-shippingThreshold__bar">
-                        <span class="cart-drawer-shippingThreshold__progress"></span>
-                    </div>
-                </div>
-            {% endif %}
-        </div>
         {% if cart.item_count == 0 %}
             <div class="cart-drawer__empty">
                 {% render 'icons-svg', icons: 'sad' %}
@@ -308,87 +290,88 @@
                             {% endif %}
                         </div>
                         <div class="ajax-cart-item__details">
-                            <p class="ajax-cart-caption">{{ item.product.vendor }}</p>
-                            <h5 class="ajax-cart-item__name">
-                                <a href="{{ item.url }}" class="break">
-                                    {{- item.product.title | escape -}}
-                                </a>
-                            </h5>
-                            {%- if item.original_price != item.final_price -%}
-                                <div class="ajax-cart-item__discounted-prices">
-                                    <span class="visually-hidden">
-                                        {{ 'sections.cart.price.regular_price' | t }}
-                                    </span>
-                                    <s class="ajax-cart-item__old-price product-option">
-                                        {{- item.original_price | money -}}
-                                    </s>
-                                    <span class="visually-hidden">
-                                        {{ 'sections.cart.price.sale_price' | t }}
-                                    </span>
-                                    <strong class="ajax-cart-item__final-price product-option">
-                                        {{ item.final_price | money }}
-                                    </strong>
-                                </div>
-                            {%- else -%}
-                                <div class="ajax-cart-item__price">
-                                    {{ item.original_price | money }}
-                                </div>
-                                <s class="ajax-cart-item__price-sale"></s>
-                            {%- endif -%}
+                            <div class="ajax-cart-item__details--left">
+                                <p class="ajax-cart-caption">{{ item.product.vendor }}</p>
+                                <h5 class="ajax-cart-item__name">
+                                    <a href="{{ item.url }}" class="break">
+                                        {{- item.product.title | escape -}}
+                                    </a>
+                                </h5>
+                                {%- if item.original_price != item.final_price -%}
+                                    <div class="ajax-cart-item__discounted-prices">
+                                        <span class="visually-hidden">
+                                            {{ 'sections.cart.price.regular_price' | t }}
+                                        </span>
+                                        <s class="ajax-cart-item__old-price product-option">
+                                            {{- item.original_price | money -}}
+                                        </s>
+                                        <span class="visually-hidden">
+                                            {{ 'sections.cart.price.sale_price' | t }}
+                                        </span>
+                                        <strong class="ajax-cart-item__final-price product-option">
+                                            {{ item.final_price | money }}
+                                        </strong>
+                                    </div>
+                                {%- else -%}
+                                    <div class="ajax-cart-item__price">
+                                        {{ item.original_price | money }}
+                                    </div>
+                                    <s class="ajax-cart-item__price-sale"></s>
+                                {%- endif -%}
 
-                            {%- if item.product.has_only_default_variant == false
-                                or item.properties.size != 0
-                                or item.selling_plan_allocation != null
-                            -%}
-                                <div class="ajax-cart-product-options">
-                                    {%- if item.product.has_only_default_variant == false -%}
-                                        <div class="ajax-cart-product-option">
-                                            {%- for option in item.options_with_values -%}
-                                                {% if forloop.index == 1 %}
-                                                    <span>{{ option.value }}</span>
-                                                {% else %}
-                                                    <span>\ {{ option.value }} </span>
-                                                {% endif %}
-                                            {%- endfor -%}
-                                        </div>
-                                    {%- endif -%}
-
-                                    {%- for property in item.properties -%}
-                                        {%- assign property_first_char = property.first | slice: 0 -%}
-                                        {%- if property.last != blank and property_first_char != '_' -%}
+                                {%- if item.product.has_only_default_variant == false
+                                    or item.properties.size != 0
+                                    or item.selling_plan_allocation != null
+                                -%}
+                                    <div class="ajax-cart-product-options">
+                                        {%- if item.product.has_only_default_variant == false -%}
                                             <div class="ajax-cart-product-option">
-                                                <dt>{{ property.first }}:</dt>
-                                                <dd>
-                                                    {%- if property.last contains '/uploads/' -%}
-                                                        <a href="{{ property.last }}" class="link" target="_blank">
-                                                            {{ property.last | split: '/' | last }}
-                                                        </a>
-                                                        {{ property.last }}
-                                                    {%- endif -%}
-                                                </dd>
+                                                {%- for option in item.options_with_values -%}
+                                                    {% if forloop.index == 1 %}
+                                                        <span>{{ option.value }}</span>
+                                                    {% else %}
+                                                        <span>\ {{ option.value }} </span>
+                                                    {% endif %}
+                                                {%- endfor -%}
                                             </div>
                                         {%- endif -%}
+
+                                        {%- for property in item.properties -%}
+                                            {%- assign property_first_char = property.first | slice: 0 -%}
+                                            {%- if property.last != blank and property_first_char != '_' -%}
+                                                <div class="ajax-cart-product-option">
+                                                    <dt>{{ property.first }}:</dt>
+                                                    <dd>
+                                                        {%- if property.last contains '/uploads/' -%}
+                                                            <a href="{{ property.last }}" class="link" target="_blank">
+                                                                {{ property.last | split: '/' | last }}
+                                                            </a>
+                                                            {{ property.last }}
+                                                        {%- endif -%}
+                                                    </dd>
+                                                </div>
+                                            {%- endif -%}
+                                        {%- endfor -%}
+                                    </div>
+
+                                    <p class="ajax-cart-product-option">
+                                        {{ item.selling_plan_allocation.selling_plan.name }}
+                                    </p>
+                                {%- endif -%}
+
+                                <ul
+                                    class="ajax-cart-discounts list-unstyled"
+                                    role="list"
+                                    aria-label="{{ 'customer.order.discount' | t }}"
+                                >
+                                    {%- for discount in item.discounts -%}
+                                        <li class="discounts__discount">
+                                            {% render 'icons-svg', icons: 'discount' %}
+                                            {{ discount.title }}
+                                        </li>
                                     {%- endfor -%}
-                                </div>
-
-                                <p class="ajax-cart-product-option">
-                                    {{ item.selling_plan_allocation.selling_plan.name }}
-                                </p>
-                            {%- endif -%}
-
-                            <ul
-                                class="ajax-cart-discounts list-unstyled"
-                                role="list"
-                                aria-label="{{ 'customer.order.discount' | t }}"
-                            >
-                                {%- for discount in item.discounts -%}
-                                    <li class="discounts__discount">
-                                        {% render 'icons-svg', icons: 'discount' %}
-                                        {{ discount.title }}
-                                    </li>
-                                {%- endfor -%}
-                            </ul>
-
+                                </ul>
+                            </div>
                             <div class="ajax-cart-item__quantity{% if property_discount %} hidden{% endif %}">
                                 <div class="ajax-cart-item__quantity-wrapper">
                                     <label class="visually-hidden" for="Quantity-{{ item.index | plus: 1 }}">
@@ -455,12 +438,27 @@
                     </div>
                 {% endif %}
             {% endfor %}
-            <div id="cart-recommend" data-ajax-cart-static-element data-size="{{ size }}">
-                <span class="visually-hidden">{{ 'sections.cart.recommend' | t }}</span>
-            </div>
         </div>
-        <form action="{{ routes.cart_url }}" method="post">
-            <div class="cart-drawer__foter">
+
+        <div class="cart-drawer-form">
+            <!-- Free shipping progress markup -->
+            {% if show_shipping %}
+                <div
+                    class="cart-drawer-shipping__wrapper js-cart-drawer-shipping"
+                    data-total="{{ shipping_total }}"
+                >
+                    <p class="cart-drawer-shipping__numOuter">
+                        {{ 'sections.cart.shipping.outer_first' | t }}
+                        <span class="cart-drawer-shipping__num"></span> {{ 'sections.cart.shipping.outer_second' | t }}
+                    </p>
+                    <p class="cart-drawer-shipping__success">{{ 'sections.cart.shipping.success' | t }}</p>
+                    <div class="cart-drawer-shippingThreshold__bar">
+                        <span class="cart-drawer-shippingThreshold__progress"></span>
+                    </div>
+                </div>
+            {% endif %}
+            {% render 'estimate-shipping' %}
+            <form action="{{ routes.cart_url }}" method="post" class="cart-drawer__foter">
                 {% if cart_note or cart_attributes %}
                     <div
                         class="cart-drawer__footer-toggler h4"
@@ -490,7 +488,9 @@
                                         {%- assign input = block.settings.label | escape -%}
                                         {% if input != blank %}
                                             <div class="cart-drawer__property">
-                                                <span class="cart-drawer__property-label"> {{ input }}: </span>
+                                                {% if input != blank %}
+                                                    <span class="cart-drawer__property-label"> {{ input }}: </span>
+                                                {% endif %}
                                                 <input
                                                     type="text"
                                                     name="attributes[{{ input }}]"
@@ -505,7 +505,11 @@
                                         {%- assign select_value = block.settings.value -%}
                                         {% if select_value != blank %}
                                             <div class="cart-drawer__property">
-                                                <span class="cart-drawer__property-label"> {{ select_label }}: </span>
+                                                {% if select_value != blank %}
+                                                    <span class="cart-drawer__property-label">
+                                                        {{ select_label }}:
+                                                    </span>
+                                                {% endif %}
                                                 <select name="attributes[select_label]" data-ajax-cart-property-input>
                                                     {% assign suggested_days = select_value | split: '|' %}
                                                     <option
@@ -536,7 +540,9 @@
                                         {%- assign radio_value = block.settings.value -%}
                                         {% if radio_value != blank %}
                                             <div class="cart-drawer__property">
-                                                <span class="cart-drawer__property-label">{{ radio_label }}:</span>
+                                                {% if radio_value != blank %}
+                                                    <span class="cart-drawer__property-label">{{ radio_label }}:</span>
+                                                {% endif %}
                                                 {% assign suggested_time = radio_value | split: '|' %}
                                                 {% for time in suggested_time %}
                                                     <label>
@@ -559,7 +565,6 @@
                                         {%- assign checkbox = block.settings.label | escape -%}
                                         {% if checkbox != blank %}
                                             <div class="cart-drawer__property">
-                                                <span class="ajax-cart__property-label"></span>
                                                 <label>
                                                     <input
                                                         type="hidden"
@@ -592,8 +597,11 @@
                         {{ 'sections.cart.checkout' | t }} — {{ cart.total_price | money }}
                     {% endif %}
                 </button>
-            </div>
-        </form>
+            </form>
+        </div>
+        <div id="cart-recommend" data-ajax-cart-static-element data-size="{{ size }}">
+            <span class="visually-hidden">{{ 'sections.cart.recommend' | t }}</span>
+        </div>
     </div>
 </div>
 
