--- a/sections/main-cart.liquid
+++ b/sections/main-cart.liquid
@@ -599,7 +599,7 @@
                 </button>
             </form>
         </div>
-        <div id="cart-recommend" data-ajax-cart-static-element data-size="{{ size }}">
+        <div id="cart-recommend" data-ajax-cart-static-element data-size="{{ size }}" data-count-desktop="4" data-count-tablet="3" data-count-mobile="1">
             <span class="visually-hidden">{{ 'sections.cart.recommend' | t }}</span>
         </div>
     </div>
