--- a/scss/sections/section-ajax-cart.scss
+++ b/scss/sections/section-ajax-cart.scss
@@ -46,15 +46,15 @@
 
 @media screen and (max-width: 550px) {
 	.cart-drawer {
-		width: 32rem;
+		width: 100%;
 	}
 
 	.cart-overlay { 
-		width: calc(100% - 32rem);
+		width: 100%;
 	}
 
 	.js-ajax-cart-open .cart-overlay {
-		right: 32rem;
+		right: 0;
 	}
 }
 
@@ -161,10 +161,10 @@
 
 .cart-drawer__property select {
 	display: inline-block;
-	width: auto;
 	padding: 1rem 3.5rem 1rem 1.5rem;
 	margin-bottom: 0;
-	min-width: 200px;
+	width: 200px;
+	height: 40px;
 }
 
 input.cart-drawer__input {
@@ -185,6 +185,7 @@ input.cart-drawer__input--qty {
 
 input.cart-drawer__input--property {
 	width: 200px;
+	height: 40px;
 }
 
 .cart-drawer__footer-toggler {
@@ -321,7 +322,7 @@ input.cart-drawer__input--property {
     text-indent: 0;
 	svg {
 		width: 2rem;
-		height: 1.9rem;
+		height: 2rem;
 		vertical-align: middle;
 	}
 	small {
