--- a/scss/sections/section-featured-posts.scss
+++ b/scss/sections/section-featured-posts.scss
@@ -101,8 +101,8 @@ swiper-section .featured-posts__list {
 @media screen and (max-width: 749px) {
     .featured-posts__list {
         flex-wrap: nowrap;
-        overflow-x: scroll;
-        scroll-snap-type: x mandatory;
+        //overflow-x: scroll;
+        //scroll-snap-type: x mandatory;
     }
 }
 
